# Indic-Synthetic-Generation-Pipeline

./: .gitignore  CLAUDE.md  DESIGN.md  METHODOLOGY.md  README.md  REQUIREMENTS.md  SPEC.md  TIMELINE.md  pyproject.toml
data/: language_statistics.csv
data/filtered/: backtranslation_scores.jsonl  judge_scores.jsonl
data/seeds/: bootstrapped_20260716T114153.json  bootstrapped_20260717T184402.json  bootstrapped_20260721T142030.json  bootstrapped_20260721T173412.json  bootstrapped_20260723T093154.json  (+5 more)
docs/: error_taxonomy.md  filter_retention_latest.md  gold_standard_protocol.md  judge_probe_ta.md  lit_review.md  model_comparison_hi_qa.md  model_comparison_ta_qa.md  model_selection.md  quality_metrics_latest.md  sources.md
rating-app/: .env.example  .gitignore  README.md  package-lock.json  package.json
scripts/: new_seeds.sh  probe_judge_discrimination.py
syndata/: __init__.py  bootstrap.py  cli.py  client.py  compare.py  data_structures.py  generator.py  gold.py  judge.py  parsing.py  ratelimit.py  seeds.py  templates.py
tests/: conftest.py  test_back_translation.py  test_bootstrap_prefilters.py  test_chain_retention.py  test_classification_labels.py  test_claude_cli_client.py  test_dedup_guard.py  test_language_id.py  test_structural.py  test_templates.py
tools/: WEEKEND_STATUS.md  audit.py  clean_broken_translation.py  creative_seeds.py  latest_audit.txt  probe_bt_discrimination.py  regen_translation.ps1  score_backtranslation.py  score_judge.py  send_email.py  test_judges.py  test_nllb.py  weekend_log.md  weekend_operator_prompt.md  weekend_run.ps1
(+18 files in other folders)
