[project]
name = "syndata"
version = "0.1.0"
description = "Synthetic data generation pipeline for low-resource Indic languages (Buttery)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Heavy, platform-specific (pulls in PyTorch). Required ONLY to run the
# back-translation filter with a real SBERT model; the filter's logic and tests
# use an injectable Embedder and need nothing here. Install with:
#   pip install -e .[backtranslation]
backtranslation = [
    "sentence-transformers>=2.2",
]

[project.scripts]
syndata = "syndata.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["syndata", "syndata.filters"]
